--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.446.0",
     "motion": "^12.23.22",
     "next": "13.5.1",
@@ -71,5 +73,8 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/html2canvas": "^0.5.35"
   }
 }
